@@ -1,3 +1,5 @@
+- shield/weapon arming/disarming and panic button rework
+- docs: more events/logs system documenting
 - code: use constants for alert mode
 v 0.1.6
 - fix bugs in logic deciding when aliens attack
